[package]
name = "aws_mfa_token_provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rpassword = "6"
atty = "0.2"
thiserror = "1"
aws-config = "0.11.0"
aws-sdk-sts = "0.11.0"
aws-types = "0.11.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
aws-config = { path = "../smithy-rs/aws/sdk/build/aws-sdk/sdk/aws-config"}
aws-types = { path = "../smithy-rs/aws/sdk/build/aws-sdk/sdk/aws-types"}
aws-sdk-sts = { path = "../smithy-rs/aws/sdk/build/aws-sdk/sdk/sts" }